# wally

./: Cargo.toml
src/: backend.rs  config.rs  focus.rs  input.rs  main.rs  monitor.rs  render.rs  ssd.rs  state.rs  winit.rs  workspace.rs
src/backend/: mod.rs  winit.rs
src/elements/: border.rs  mod.rs  pointer.rs  window.rs
src/grabs/: move_grab.rs  resize_grab.rs
src/handlers/: compositor.rs  mod.rs  xdg_shell.rs
src/shaders/: border.frag
src/types/: keybind.rs  mod.rs
src/util/: log.rs
